--- a/templates/authentication/index.html
+++ b/templates/authentication/index.html
@@ -31,7 +31,7 @@
     {% if user.is_authenticated %}
 
     <h3>Hello {{fname}}</h3>
-    <h4>You are account has been successfully verified.</h4>
+    <h4>Your account has been successfully verified.</h4>
 
     {% else %}
     <button type="submit"><a href="/signup">SignUp</a></button>
